<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPostFragment">

    <TextView
        android:id="@+id/tv_add_post_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/add_post"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:background="@drawable/add_post_add_photos_btn"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/add_post_add_picture"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_add_post_text"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/add_post_to_post_btn"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/add_post_to_post"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_add_post_text"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="145dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"

        android:hint="@string/add_post_add_text"

        app:boxStrokeColor="#0056FF"
        app:endIconMode="clear_text"
        app:endIconTint="#0056FF"
        app:hintTextColor="#FF0056FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_post_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_vk_token"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="text|textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <TableLayout
        android:id="@+id/tl_add_post_photos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add_photos"
        app:layout_constraintBottom_toTopOf="@id/btn_to_post"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp">


        <TableRow
            android:id="@+id/tr_add_post_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TableRow
            android:id="@+id/tr_add_post_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TableRow
            android:id="@+id/tr_add_post_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>